--- a/nhood-change-dashboard-saltlakecity-ut.rmd
+++ b/nhood-change-dashboard-saltlakecity-ut.rmd
@@ -99,13 +99,6 @@ dd.name <-c("Percent White not Hispanic", "Percent Black not Hispanic","Percent 
 x <- dd.name
 names(x) <- value
 temp.names <- paste0( dd.name )
-#names( x[2] )
- 
-#x[ "two" ]
-
-#x[ input$demographics ]
-
-#temp.names <- paste0( "Variable ", these.variables )
 
 radioButtons( inputId="demographics", 
               label = h3("Census Variables"),
@@ -113,7 +106,6 @@ radioButtons( inputId="demographics",
               choiceNames=temp.names,
               choiceValues=these.variables,
               selected="pnhwht12")
-
 
 
 # Adding interpretable variable names
@@ -169,7 +161,7 @@ ggplot( get_data() ) +
     labs( title = paste0( "Choropleth of Select Demographics: ", toupper(input$demographics) ),
           caption = "Source: Harmonized Census Files",
           fill = "Population Deciles" ) +
-    scale_fill_gradientn( colours=rev(ocean.balance(10)), guide = "colourbar" ) + 
+    scale_fill_gradientn( colours=rev(brewer.ylorbr(10)), guide = "colourbar" ) + 
     xlim( xmin = -12333000, xmax = -12533000 ) + 
     ylim( ymin = 5034000, ymax = 4934000 )
 
@@ -181,6 +173,8 @@ ggplot( get_data() ) +
 
 
 ### Variable Distribution 
+
+
 
 ```{r}
 renderPlot({
@@ -198,9 +192,9 @@ cut.points <- quantile( x, seq( 0, 1, 0.1 ) )
 hist( x, breaks=50, 
       col="gray", border="white", yaxt="n",
       main=paste0( "Histogram of variable ", toupper( input$demographics ) ),
-      xlab="red lines represent decile cut points" )
+      xlab="orange lines represent decile cut points" )
 
-abline( v=cut.points, col="darkred", lty=3, lwd=2 )
+abline( v=cut.points, col="darkorange", lty=3, lwd=2 )
 
 
 })
@@ -280,6 +274,19 @@ Row {.tabset}
 
 
 ```{r}
+d <- merge( slc, d, by.x="geoid-01", by.y="geoid-02", all.x=TRUE )
+x <- d$tractid 
+head( x )
+
+x <- gsub( "fips", "", x )
+x <- gsub( "-", "", x )
+head( x )
+
+x <- as.numeric( x )
+
+# remember to add the variable back to the dataset
+d$tractid2 <- x 
+
 
 renderPlot({
 
@@ -299,7 +306,7 @@ ggplot( get_data() ) +
     labs( title = paste0( "Spatial Distribution of Home Values: ", toupper(input$demographics) ),
           caption = "Source: Harmonized Census Files",
           fill = "Home Value Deciles" ) +
-    scale_fill_gradientn( colours=rev(ocean.balance(10)), guide = "colourbar" ) + 
+    scale_fill_gradientn( colours=rev(brewer.ylorbr(10)), guide = "colourbar" ) + 
     xlim( xmin = -12333000, xmax = -12533000 ) + 
     ylim( ymax = 4934000, ymin = 5034000 )
 
@@ -328,9 +335,9 @@ cut.points <- quantile( x, seq( 0, 1, 0.1 ) )
 hist( x, breaks=50, 
       col="gray", border="white", yaxt="n",
       main=paste0( "Histogram of ", toupper( input$home.value ) ),
-      xlab="red lines represent decile cut points" )
+      xlab="orange lines represent decile cut points" )
 
-abline( v=cut.points, col="darkred", lty=3, lwd=2 )
+abline( v=cut.points, col="darkorange", lty=3, lwd=2 )
 
 
 })
@@ -371,13 +378,11 @@ covariates <- c("pnhwht12", "pnhblk12", "phisp12", "pntv12", "pfb12", "polang12"
 covariate.labels <-c("Percent White not Hispanic", "Percent Black not Hispanic","Percent Hispanic", "Percent Native American", "Percent Forgin Born", "Percent Speaking other Language at home older than 5", "Percent with only Highschool Diploma ", "Percent with College Degree ", "Percent Unemployed",  "Percent Females in Labor Force", "Percent Professional Workers", "Percent Manufactor Workers", "Percent Veterans", "Percent Self Employed", "Median Household Income", "Per capita Income", "Percent in Poverty", "Percent Owner Occupied", 
 "Percent Percent Vacancy",  "Percent Multifamily Units", "Median Rent", "Median Home Value",  "Percent structures 30 years old", "Percent 10 years or less", "Percent  under 18 years old", "Percent older than 60", "Percent older than 75", "Percent Married", "Percent Widowed/Separated", "Percent Female Head of Household") 
 
-x <- covariate.labels
-names(x) <- covariates
-covariate.labels <- paste0( covariate.labels )
+
 
 checkboxGroupInput( inputId="covariates", 
               label = h3("Select Variables for Your Model"),
-              choices = covariates,
+              #choices = covariates,
               choiceNames=covariate.labels,
               choiceValues=covariates,
               selected=c("pnhwht12","pprof12","pvac12") )
@@ -445,13 +450,62 @@ HTML(
 # HTML( reg.table )
 ```
 
+```{r}
+panel.cor <- function(x, y, digits=2, prefix="", cex.cor)
+{
+    usr <- par("usr"); on.exit(par(usr))
+    par(usr = c(0, 1, 0, 1))
+    r <- abs(cor(x, y))
+    txt <- format(c(r, 0.123456789), digits=digits)[1]
+    txt <- paste(prefix, txt, sep="")
+    if(missing(cex.cor)) cex <- 0.8/strwidth(txt)
+    
+    test <- cor.test(x,y)
+    # borrowed from printCoefmat
+    Signif <- symnum(test$p.value, corr = FALSE, na = FALSE,
+                  cutpoints = c(0, 0.001, 0.01, 0.05, 0.1, 1),
+                  symbols = c("***", "**", "*", ".", " "))
+    
+    text(0.5, 0.5, txt, cex = 1.5 )
+    text(.7, .8, Signif, cex=cex, col=2)
+}
+
+panel.smooth <- function (x, y, col = par("col"), bg = NA, pch = par("pch"), 
+    cex = 0.5, col.smooth = "orange", span = 2/3, iter = 3, ...) 
+{
+    points(x, y, pch = 19, col = gray(0.7,0.2), bg = bg, cex = cex)
+    ok <- is.finite(x) & is.finite(y)
+    if (any(ok)) 
+        lines(stats::lowess(x[ok], y[ok], f = span, iter = iter), 
+            col = col.smooth, lwd=2, ...)
+}
+
+# custom plot
+jplot <- function( x1, x2, lab1="", lab2="", draw.line=T, ... )
+{
+
+    plot( x1, x2,
+          pch=19, 
+          col=gray(0.6, alpha = 0.2), 
+          cex=0.5,  
+          bty = "n",
+          xlab=lab1, 
+          ylab=lab2, cex.lab=1.5,
+        ... )
+
+    if( draw.line==T ){ 
+        ok <- is.finite(x1) & is.finite(x2)
+        lines( lowess(x2[ok]~x1[ok]), col="orange", lwd=3 ) }
+
+}
+```
 
 
 ### Correlation Plots 
 
 ```{r}
 renderPlot({
-  pairs (d[input$covariates])
+  pairs (d[input$covariates], upper.panel= panel.cor, lower.panel=panel.smooth )
 })
 ```
 
